# bootnode

./: .gitignore  LLM.md  compose.yml  docker-compose.prod.yml  test-e2e.sh
.github/workflows/: ci.yml  docker-release.yml
api/: Dockerfile  pyproject.toml
api-go/: Dockerfile  go.mod  go.sum
api-go/client/: bootnode.go
api-go/cmd/bootnode/: main.go
api-go/internal/api/: auth.go  router.go  routes.go
api-go/internal/config/: config.go
api-go/internal/db/: db.go  models.go  schema.go
api-go/internal/iam/: iam.go
api/bootnode/: config.py  main.py
api/bootnode/api/: __init__.py  chat.py  deps.py  zap.py
api/bootnode/api/auth/: oauth.py
api/bootnode/api/billing/: __init__.py
api/bootnode/api/fleets/: __init__.py
api/bootnode/api/infra/: __init__.py
api/bootnode/api/lux/: __init__.py
api/bootnode/api/networks/: __init__.py
api/bootnode/api/observability/: __init__.py
api/bootnode/core/: iam.py  o11y.py
api/bootnode/core/billing/: __init__.py  cloud_billing.py  commerce.py  sync.py  tiers.py  tracker.py  unified.py  webhooks.py
api/bootnode/core/chains/: __init__.py  fleet_manager.py  fleet_models.py  lux.py  lux_models.py  registry.py
api/bootnode/core/datastore/: __init__.py  client.py
api/bootnode/core/deploy/: __init__.py  base.py  helm.py  kubernetes.py
api/bootnode/core/kms/: __init__.py
api/bootnode/db/: models.py  session.py
api/bootnode/zap/: bootnode.capnp  bootnode.zap  server.py
api/tests/: test_billing.py  test_db_session.py  test_deploy.py  test_lux_fleet.py
brand/: config.ts
charts/lux/: Chart.yaml
infra/: compose.yml
infra/cloud/: deploy.sh
infra/do-app-platform/: bootnode-operator.yaml  hanzo-platform.yaml
infra/k8s/: api-deployment.yaml  bootnode-deployment.yaml  bootnode-operator.yaml  cloud-ingress.yaml  docs-deployment.yaml  external-secrets.yaml  hanzo-web3-deployment.yaml  indexer-deployment.yaml  ingress.yaml  kustomization.yaml  monitoring.yaml  network-policies.yaml  secrets.yaml  web-deployments.yaml
infra/k8s/hanzo/: bootnode-api.yaml
infra/k8s/lux/: crds.yaml  deploy-subgraph.sh  deploy.sh  graph-node.yaml  operator-deployment.yaml  rbac.yaml
infra/sql/: init.sql
operator/: Cargo.toml  Dockerfile
operator/src/: api.rs  controller.rs  crd.rs  error.rs  main.rs  resources.rs
operator/src/drivers/: bitcoin.rs  ethereum.rs  lux.rs  mod.rs
web/: Dockerfile  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/app/auth/callback/: page.tsx
web/app/dashboard/: layout.tsx  page.tsx
web/app/dashboard/analytics/: page.tsx
web/app/dashboard/assets/tokens/: page.tsx
web/app/dashboard/infrastructure/: page.tsx
web/app/dashboard/infrastructure/clusters/: page.tsx
web/app/dashboard/infrastructure/lux/: page.tsx
web/app/dashboard/infrastructure/lux/map/: page.tsx
web/app/dashboard/infrastructure/monitoring/: page.tsx
web/app/dashboard/infrastructure/observability/: page.tsx
web/app/dashboard/infrastructure/services/: page.tsx
web/app/dashboard/infrastructure/storage/: page.tsx
web/app/dashboard/infrastructure/volumes/: page.tsx
web/app/dashboard/organization/: page.tsx
web/app/dashboard/organization/billing/: page.tsx
web/app/dashboard/usage/: page.tsx
web/app/docs/sdks/: page.tsx
web/app/login/: page.tsx
web/app/privacy/: page.tsx
web/app/products/explorer/: page.tsx
web/app/products/mpc/: page.tsx
web/app/products/wallets/: page.tsx
web/app/terms/: page.tsx
web/components/: ai-chat.tsx  code-demo.tsx  command-menu.tsx  footer.tsx  nav-menu.tsx  navbar.tsx  unified-navigation.tsx
web/components/lux/: fleet-map.tsx  region-data.ts  world-paths.ts
web/hooks/: use-media-query.ts
web/lib/: api.ts  auth.tsx  brand.ts  sdk-package.ts
web/lib/lux/: regions.ts
